test_programs/compile_failure/comptime_parse_all_tokens/src/main.nr
#[foo]
fn main() {}

comptime fn foo(_f: FunctionDefinition) -> Quoted {
    let t = quote { Field }.as_type();
    // We parse 0 or more top level expressions from attribute output
    // so for invalid input we previously "successfully" parsed 0 items.
    quote { use $t; }
}
